--- a/admin/package.json
+++ b/admin/package.json
@@ -3,11 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+    "homepage": "https://syedishaq.me/Food-Delivery-Platform/admin",
+
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.7.3",
